# Disciplr-Contracts

./: .gitignore  CHANGELOG.md  COVERAGE_ANALYSIS.md  Cargo.toml  README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  TEST_VERIFIER_SAME_AS_CREATOR.md  USDC_INTEGRATION.md  add_tests.py  contract-interface.json  patch.py  pr_body_upstream.md  rustfmt.toml  tarpaulin.toml  vesting.md
.cargo/: audit.toml
.github/workflows/: ci.yml  coverage.yml
coverage/: lcov.info  tarpaulin-report.html
src/: doc.md  lib.rs  test.rs
test_snapshots/: test_amount_exactly_max_allowed.1.json  test_amount_zero.1.json  test_create_vault_valid_boundary_values.1.json  test_get_vault_state_cancelled_vault_remains_readable.1.json  test_get_vault_state_never_created_id_returns_none.1.json  test_minimum_valid_duration.1.json  test_start_timestamp_in_past.1.json  test_valid_zero_verifier_and_normal_duration.1.json
test_snapshots/test/: test_create_vault_exact_balance.1.json  test_create_vault_insufficient_balance.1.json  test_create_vault_success.1.json  test_create_vault_with_verifier.1.json  test_create_vault_zero_amount.1.json
test_snapshots/tests/: test_cancel_after_creator_validates_no_verifier_rejected.1.json  test_cancel_after_validate_returns_milestone_already_validated_error.1.json  test_cancel_vault_changes_status.1.json  test_cancel_without_validation_still_allowed.1.json  test_create_vault_assigns_incrementing_ids.1.json  test_create_vault_no_verifier_destination_overlap_allowed.1.json  (+11 more)
tests/: create_vault.rs  lifecycle.rs  proptest_amounts.rs  proptest_timestamps.rs
