[package]
name = "disciplr-vault"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

# Pin to exact patch to guarantee reproducible builds and simplify audit scope.
# Cargo.lock records 22.0.11; bump intentionally and update this comment when upgrading.
# Rationale: soroban-sdk follows semver but breaking changes have historically landed
# in minor bumps during the pre-1.0 era; an exact pin prevents silent upgrades in CI.
[dependencies]
soroban-sdk = "=22.0.11"

[dev-dependencies]
soroban-sdk = { version = "=22.0.11", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
